[package]
name = "rusoto-on-new-tokio"
version = "0.1.0"
authors = ["LukeMathWalker <lpalmieri@truelayer.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_firehose = "0.40.0"
rusoto_core = "0.40.0"
rusoto_mock = "0.40.0"
futures-preview = { version = "0.3.0-alpha.18", features = ["compat"] }
tokio = {version = "0.2.0-alpha.2"}
